[package]
name = "gader_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bollard = "0.20.1"
futures = "0.3.32"
regex = "1.12.3"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
gader_common = { path = "../gader_common"}
quinn = "0.11.9"
postcard = { version = "1.1.3", features = ["use-std"] }
rcgen = { version = "0.14.7", features = ["crypto", "pem", "ring"]}
rustls-pki-types = "1.14.0"
rustls = { version = "0.23.37", features = ["ring", "std"] }
bytes = "1.11.1"
tokio-util = { version = "0.7.18", features = ["codec"] }
